--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 
 services:
   app:
-    container_name: jet-terabox
+    container_name: jet-terabox-switch
     build:
       context: .
       dockerfile: Dockerfile
